--- a/frontend/src/tutorial/blosite-introduction/index.html
+++ b/frontend/src/tutorial/blosite-introduction/index.html
@@ -88,7 +88,7 @@
                     ブロックにマウスポインターをかざすと説明文が出てくるので、ぜひ活用してください！<br>
                   </p>
                 </section>
-                <img src="<%= require('/src/images/blosite-introduction_0.png') %>" alt="Sample Image" class="slide-images">
+                <video src="<%= require('/src/images/blosite-introduction_1.mp4') %>"  controls class="slide-images" style="width: 50%;">
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -98,25 +98,24 @@
                       <li>コードを表示：実際のHTMLのコードを見ることができます。興味があれば左のブロックと見比べてみてください！</li>
                       <li>スクリプトの常時実行：OFFのときはボタンを押すたびに<code class="popup-code">&lt;script&gt;</code>が実行され、ONだと右側のボタンのアイコンが切り替わり、常時実行の状態だとブロックを動かすたびに<code class="popup-code">&lt;script&gt;</code>が実行されます。</li>
                       <li>サンドボックスで作り続ける：チュートリアルの内容から外れて作り続けたいときに押しましょう！サンドボックスでは作ったサイトを公開することができます。</li>
-                      <li>プレビューを全画面で表示：右側のプレビューを別のタブで全画面で見ることができます。このサイトはHTMLの言語でプログラムしたのと実質的に同じです。</li>
+                      <li>プレビューを全画面で表示：右側にあるプレビューを別のタブで全画面で見ることができます。</li>
                     </ul>
                   </p>
                 </section>
-                <img src="<%= require('/src/images/blosite-introduction_0.png') %>" alt="Sample Image" class="slide-images" style="max-height: 350px;">
+                <img  src="<%= require('/src/images/blosite-introduction_2.png') %>" class="slide-images" style="max-height: 350px;">
               </div>
               <div class="popup-slides" id="popup-slide-3" style="display: flex;">
                 <section class="silde-text-with-images">
                   <p>
                     右には作ったサイトのプレビューが表示されます。丸型の実行アイコンを押してから、「押してください」と書かれたボタンを押してみましょう！<br>
+                    余裕のある方は、真ん中のブロックを自由に動かしたり、テキストを変えたりしてみて、右側のプレビューがどう変わるのか見てみましょう！<br><br>
 
-                    余裕のある方は、真ん中のブロックを自由に動かしたり、テキストを変えたりしてみて、右側のプレビューがどう変わるのか見てみましょう！<br>
+                    ブロックの意味していることがわからなくても大丈夫です！これからのチュートリアルを通じて、基本的な内容について学んでいきましょう！<br><br>
 
-                    ブロックの意味していることがわからなくても大丈夫です！これからのチュートリアルを通じて、基本的な内容について学んでいきましょう！<br>
-
-                    何かわからないことがあれば、スタッフに聞きましょう！
+                    進めている途中で何かわからないことがあれば、ぜひスタッフに聞きましょう！
                   </p>
                 </section>
-                <img src="<%= require('/src/images/blosite-introduction_3.png') %>" alt="Sample Image" class="slide-images" style="max-height: 350px;">
+                <video src="<%= require('/src/images/blosite-introduction_3.mp4') %>" controls class="slide-images" style="width: 50%;">
               </div>
             </div>
             <div id="popup-navigation">
