--- a/frontend/src/tutorial/css-introduction/index.html
+++ b/frontend/src/tutorial/css-introduction/index.html
@@ -75,7 +75,7 @@
                   <p>
                   &emsp;今まではhtmlとは何かについて学びました。htmlがウェブサイトの構造を表す言語だったのに対してCSSはウェブサイトの見た目を<br>
                   表す言語です。blositeではstyle属性をhtml要素に加えることでCSSを記述して見た目を変更することができます。style属性を追加する<br>
-                  には左上のHTMLAttributesの中に入っているstyleと書かれたブロックを使います。
+                  には左上のHTML属性の中に入っているstyleと書かれたブロックを使います。
                   </p>
                 </section>
               </div>
@@ -85,22 +85,30 @@
                   <p>
                     &emsp;styleブロックの中には歯車が入っています。その歯車をクリックすると右の画像のように項目がでてきます。項目と書かれたブロックをドラッグすることで接続する部分の数を変更することができます。
                   </p>
-                  <h2>色を変えてみよう</h2>
+                  <h3>色を変えてみよう</h3>
                   <p>
                     &emsp;まずは実際に文字の色を変えてみましょう。HTMLを知ろうのところで作成した遠足の持ち物リス<br>
                     トがあるのでその文字の色を変えてみましょう。
-                    文字の色を変えるにはstyleブロックにCSSカテゴリーに含まれているcolorブロックを使います。色は色コードを入力するか色の名前を英語で入力することで変更することができます。
+                    文字の色を変えるにはstyleブロックに見た目フォルダに含まれているcolorブロックを接続して変更します。色はパレットをクリックすることで選択肢の中から選んで変更できます。
                   </p>
                 </section>
-                <img src ="<%= require('/src/images/styleblock.gif')%>"alt="Sample Image" class="slide-images">
+                <video src ="<%= require('/src/images/csstukaikata.mp4')%>" autoplay muted playsinline loop class="slide-images">
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: flex;">
                 <section class="silde-text-with-images">
-                  <h3>下の画像のようなものを作ってみよう</h3>
+                  <h3>複数のCSSを制御しよう</h3>
                   <p>
-                    &emsp;先ほどは文字の色だけを変更してもらいましたがCSSでできるのは文字の色の変更だけではありません。今度は背景の色と文字の配置を変えてみましょう。
-                    右の画像と同じものを作ってみましょう。
-                    </p>
+                    &emsp;先ほどは文字の色だけを変更してもらいましたがCSSでできるのは文字の色の変更だけではありません。今度は背景の色と文字の配置を変えてみて右の画像と同じものを作ってみましょう。
+                  </p>
+                  <h3>どんな変更が加えられているか</h3> 
+                  <p style="margin: 0;">
+                    ここでは以下の三つの変更点があります。
+                  <ul style="margin:0;">
+                    <li>「遠足の持ち物」が中央に配置されている。</li>
+                    <li>背景の色が黄色になっている。</li>
+                    <li>持ち物のリストが青色になっている。</li>
+                  </ul>
+                  </p>
                 </section>
                 <img src ="<%= require('/src/images/cssexample.png')%>"alt="Sample Image" class="slide-images">
               </div>
@@ -108,9 +116,10 @@
                 <section class="silde-text-with-images">
                   <h3>ヒント</h3>
                   <p>
-                    &emsp;背景の色を変えるにはbackground-colorブロックを使いましょう。色の指定の仕方はcolorブロックと同じです。文字の位置の変え方はいくつかの方法がありますが、今回はtext-alignブロックを使ってみましょう。text-alignブロックは特定の値しか入れることができないので注意してください。
+                    &emsp;背景の色を変えるにはbackground-colorブロックを使いましょう。色の指定の仕方はcolorブロックと同じです。文字の位置の変え方はいくつかの方法がありますが、今回はtext-alignブロックを使ってみましょう。text-alignブロックは特定の値(left,right,center,justfy)しか入力できないので注意してください。
                   </p>
                 </section>
+                <img src ="<%= require('/src/images/csshint.png')%>"alt="Sample Image" class="slide-images">
               </div>
             </div>
             <div id="popup-navigation">
