いろいろなHTML要素を写真以外修正

--- a/frontend/src/tutorial/various-html-elements/index.html
+++ b/frontend/src/tutorial/various-html-elements/index.html
@@ -77,11 +77,12 @@
                   </p>
                   <h3>詳細</h3>
                   <p>
-                    すでに設置されているブロックを利用して、テキストボックスや文章を変更しましょう。<br>
+                    すでに設置されているブロックを利用して、テキストボックスや文章を変更しましょう。<br><br>
+
                     もし最初からやり直したいときは、すべてのブロックを削除して、ページを再読み込みしてください。
                   </p>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images">
+                <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images" style="max-height: 350px;">
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -89,7 +90,7 @@
                   <p>
                     HTML要素には、特別な機能や見た目を持つものや、表示に関係なく要素の意味づけや整理をするために使われるものがあります。<br>
                     ここでは試しに右の写真のように作ってみましょう。<br>
-                    一般に、文章は段落を意味する<code>&lt;p&gt;</code>要素の中に書きます。また、下付き文字は<code>&lt;sub&gt;</code>要素を使って作成できます。<br>
+                    一般に、文章は段落を意味する<code class="popup-code">&lt;p&gt;</code>要素の中に書きます。また、下付き文字は<code class="popup-code">&lt;sub&gt;</code>要素を使って作成できます。<br>
 
                   </p>
                 </section>
@@ -100,9 +101,9 @@
                   <h3>HTML属性</h3>
                   <p>
                     HTML属性とは、HTML要素に付けることができる追加情報のことです。HTML属性のカテゴリーを開いてどんなものがあるか見てみましょう。<br>
-                    HTML属性は右のように要素に対して組み付けることができます。ここでは<code>&lt;input&gt;</code>要素の<code>type</code>属性について詳しく見てみましょう。<br>
-                    type="text"（デフォルトの設定）だと文字の入力欄、type="number"だと数字の入力欄、type="checkbox"だとチェックボックスになります。<br>
-                    また、HTML属性は１つの要素に複数個つけることができます。例えば、placeholder属性を付け加えると、入力欄に何を入力すればいいかヒントを表示することができます。style要素では、見た目を自在に返納することができます！（詳しくは次のチュートリアルでやりましょう）<br>
+                    HTML属性は右のように要素に対して組み付けることができます。ここでは<code class="popup-code">&lt;input&gt;</code>要素の<code class="popup-code">type</code>属性について詳しく見てみましょう。<br>
+                    <code  class="popup-code">type="text"</code>（デフォルトの設定）だと文字の入力欄、<code class="popup-code">type="number"</code>だと数字の入力欄、<code  class="popup-code">type="checkbox"</code>だとチェックボックスになります。<br>
+                    また、HTML属性は１つの要素に複数個つけることができます。例えば、<code  class="popup-code">placeholder</code>属性を付け加えると、入力欄に何を入力すればいいかヒントを表示することができます。<code  class="popup-code">style</code>属性では、見た目を自在に変更することができます！（詳しくは次のチュートリアルでやりましょう）<br>
                   </p>
                 </section>
               </div>
@@ -115,9 +116,9 @@
                   </p>
                   <h3>ヒント</h3>
                   <ol>
-                    <li>キーの表示は<code>&lt;kbd&gt;</code>を使いましょう。</li>
-                    <li>チェックボックスは<code>&lt;input&gt;</code>の属性にtype="checkbox"を設定しましょう。</li>
-                    <li><code>&lt;div&gt;</code>の属性にstyle="flex"を指定すると、その<code>&lt;div&gt;</code>の中にある要素を横方向に並べることができます。</li>
+                    <li>キーの表示は<code  class="popup-code">&lt;kbd&gt;</code>を使いましょう。</li>
+                    <li>チェックボックスは<code  class="popup-code">&lt;input&gt;</code>の属性に<code  class="popup-code">type="checkbox"</code>を設定しましょう。</li>
+                    <li><code  class="popup-code">&lt;div&gt;</code>の属性に<code  class="popup-code">style="flex"</code>を指定すると、その<code  class="popup-code">&lt;div&gt;</code>の中にある要素を横方向に並べることができます。</li>
                   </ol>
                 </section>
                 <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images">
