styleをDOMで変えれるようにしたのとomikujiのチュートリアルの変更

--- a/frontend/src/tutorial/css-introduction/index.html
+++ b/frontend/src/tutorial/css-introduction/index.html
@@ -87,8 +87,7 @@
                   </p>
                   <h3>色を変えてみよう</h3>
                   <p>
-                    &emsp;まずは実際に文字の色を変えてみましょう。HTMLを知ろうのところで作成した遠足の持ち物リス<br>
-                    トがあるのでその文字の色を変えてみましょう。
+                    &emsp;まずは実際に文字の色を変えてみましょう。HTMLを知ろうのところで作成した遠足の持ち物リストがあるのでその文字の色を変えてみましょう。
                     文字の色を変えるにはstyleブロックに見た目フォルダに含まれているcolorブロックを接続して変更します。色はパレットをクリックすることで選択肢の中から選んで変更できます。
                   </p>
                 </section>
