--- a/frontend/src/tutorial/omikuji/index.html
+++ b/frontend/src/tutorial/omikuji/index.html
@@ -84,30 +84,35 @@
                 <section>
                   <h3>ボタンと表示する場所の作成</h3>
                   <p>
-                    &emsp;まずはボタンを作ってボタンにテキストを入力し、id属性を設定しましょう。それができたら&lt;div&gt;を用いて結果を表示する場所を作りましょう。<br>
+                    &emsp;まずはボタンを作ってボタンのなかにテキストを入力してid属性を設定しましょう。それができたら&lt;div&gt;を用いて結果を表示する場所を作りましょう。<br>
                     この&lt;div&gt;要素の中身を書き換えることで結果を表示したいのでこの&lt;div&gt;要素にもidを設定しましょう。
                   </p>
                   <h3>DOM操作</h3>
                   <p>
-                    「id="&emsp;"の要素」ブロック、「要素～の文章」ブロック、「～にイベント～が発生したとき」ブロック、「～に～を代入」ブロックを用いて<br>
-                    DOM操作をしましょう。
+                    「id="&emsp;"の要素」ブロック、「要素～の文章」ブロック、「～にイベント～が発生したとき」ブロック、「～に～を代入」ブロックを用いてDOM操作をしましょう。
                   </p>  
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: none;">
                 <section>
-                  <h3>乱数の使い方</h3>
+                  <h3>乱数の作り方</h3>
                   <p>
+                    &emsp;おみくじなのでどんな結果が出るのかはランダムで決まってほしいです。そこで変数に1未満のランダムな数を代入してその値によって条件分岐するようにしましょう。1未満のランダムな数を生成するには数式フォルダにある「1未満の正の乱数」ブロックを使いましょう。例えば変数の値が1～0.80のときに大吉と表示するようにすれば大吉は20%の確率で表示されるようになります。
+                  </p>
+                  <h3>条件分岐</h3>
+                  <p>
+                    条件分岐はボタンがクリックされると行われます。なので乱数の生成をどこで行うのかに注意しながらブロックを配置しましょう。
                   </p>
                 </section>
               </div>
               <div class="popup-slides" id="popup-slide-3" style="display: none;">
                 <section>
+                  <発展・工夫>
                   <p>
-                    結果の文字やボタンの色、文字の大きさ表示される位置などを変更してみましょう。
-                    cssブロックを使うことでこれらの変更を加えることができます。
+                   例えばおみくじの結果によって文字の色や大きさが変わるようにしてみたり、おみくじの結果を増やしてみたり、一度に複数の結果を表示したりしてみましょう。
                   </p>
                 </section>
+                <video src ="<%= require('/src/images/omikujihatten.mp4')%>" autoplay muted playsinline loop class="slide-images" style = "margin:0;"></video>
               </div>
             </div>
             <div id="popup-navigation">
