--- a/frontend/src/tutorial/html-introduction/index.html
+++ b/frontend/src/tutorial/html-introduction/index.html
@@ -60,11 +60,11 @@
             <div id="popup-close">×</div>
             <div id="popup-button-container">
               <button class="popup-buttons" id="popup-button-0">HTMLとは</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-1">実際にやってみよう</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-2">持ち物リストを作ってみよう</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-3">ヒント</button>
             </div>
             <div id="popup-message">
