--- a/frontend/src/tutorial/todo/index.html
+++ b/frontend/src/tutorial/todo/index.html
@@ -63,11 +63,11 @@
             <div id="popup-close">×</div>
             <div id="popup-button-container">
               <button class="popup-buttons" id="popup-button-0">todoの内容を入れられるようにする</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-1">Todoリストの追加</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-2">Todoリストの削除</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-3">Todoリストの編集</button>
             </div>
             <div id="popup-message">
