--- a/frontend/src/tutorial/various-html-elements/index.html
+++ b/frontend/src/tutorial/various-html-elements/index.html
@@ -60,11 +60,11 @@
             <div id="popup-close">×</div>
             <div id="popup-button-container">
               <button class="popup-buttons" id="popup-button-0">目標</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-1">HTML要素の詳細</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-2">HTML属性とは</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-3">完成</button>
             </div>
             <div id="popup-message">
